<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.ViewOwnListing">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_view_own_listing" />



   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_marginBottom="60dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <ImageView
                android:id="@+id/listingImage"
                android:src="@drawable/addpics"
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="80dp"
                android:background="#72667860"
                android:padding="1dp"/>
            <TextView
                android:id="@+id/listingTitle"
                android:text="Default Title"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/listingImage"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="25sp"
                android:fontFamily="@font/corbel"
                />

            <TextView
                android:id="@+id/listingPrice"
                android:text="Default Price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/listingTitle"
                android:ems="10"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="24sp"
                android:drawablePadding="5dp"
                android:drawableLeft="@drawable/ic_price"
                android:drawableTint="@color/colorDarkGreen"
                android:fontFamily="@font/corbel"
                />

            <TextView
                android:id="@+id/listingCategory"
                android:text="Default Category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/listingPrice"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="20sp"
                android:drawablePadding="5dp"
                android:drawableLeft="@drawable/ic_category"
                android:drawableTint="@color/colorDarkGreen"
                android:fontFamily="@font/corbel"/>

            <TextView
                android:id="@+id/listingDescriptionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/listingCategory"
                android:text="Description:"
                android:textStyle="italic"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="20sp"
                android:drawablePadding="5dp"
                android:drawableLeft="@drawable/ic_description"
                android:drawableTint="@color/colorDarkGreen"
                android:fontFamily="@font/corbel"
                />

            <TextView
                android:id="@+id/listingDescription"
                android:text="Default Description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/listingDescriptionText"
                android:ems="10"
                android:gravity="start|top"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:textSize="18sp"
                android:fontFamily="@font/corbel"
                />

        </RelativeLayout>
   </ScrollView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/colorLightGreen">

        <ImageButton
            android:id="@+id/deleteListingButton"
            android:src="@drawable/ic_delete"
            android:background="@drawable/circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:layout_alignParentRight="true"
            />
        <ImageButton
            android:id="@+id/editListingButton"
            android:src="@drawable/ic_edit"
            android:background="@drawable/circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:layout_toLeftOf="@+id/deleteListingButton"
            />

    </RelativeLayout>





</androidx.coordinatorlayout.widget.CoordinatorLayout>