<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageViewCategoryIcon"
        android:src="@drawable/general"
        android:layout_width="26dp"
        android:layout_height="26dp">

    </ImageView>

    <TextView
        android:id="@+id/textViewCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="1dp"
        android:fontFamily="@font/corbelb"
        android:gravity="center"
        android:text="General"
        android:textColor="@android:color/black"
        android:textSize="20sp">

    </TextView>

</RelativeLayout>